compilers/8051/8051_bison.output
Terminals unused in grammar

   TRUEASSIGN
   ASSIGN
   SUM
   RES
   MUL
   DIV
   EVAL
   EQ
   NEQ
   LES
   MOR
   LEQ
   MEQ
   ITERLIMIT


Grammar

    0 $accept: root $end

    1 root: %empty
    2     | root line

    3 lines: line lines
    4      | line

    5 line: structure
    6     | exp ';'
    7     | ENTER

    8 exp: assign
    9    | call

   10 @1: %empty

   11 assign: REG @1 '=' unitA

   12 @2: %empty

   13 call: ID @2 '(' args ')'

   14 args: element COM args
   15     | element
   16     | call COM args
   17     | call
   18     | %empty

   19 element: REG
   20        | NUM
   21        | '-' NUM
   22        | STRING

   23 structure: ifStructure
   24          | ifElseStructure
   25          | whileStructure
   26          | forStructure
   27          | functionStructure

   28 statement: comparisons
   29          | '!' comparisons

   30 unitA: unitA operatorA unitB
   31      | unitB

   32 unitB: unitB operatorB element
   33      | unitB operatorB call
   34      | element
   35      | call

   36 comparison: unitA compOperator comparison
   37           | unitA

   38 comparisons: '(' comparisons ')' compOperator '(' comparisons ')'
   39            | comparison

   40 operatorA: '+'
   41          | '-'

   42 operatorB: '/'
   43          | '*'

   44 compOperator: '=' '='
   45             | '!' '='
   46             | '<'
   47             | '>'
   48             | '<' '='
   49             | '>' '='
   50             | AND
   51             | OR

   52 $@3: %empty

   53 ifStructure: IF '(' statement $@3 ')' '{' lines '}'

   54 $@4: %empty

   55 $@5: %empty

   56 ifElseStructure: IFELSE '(' statement $@4 ')' '{' lines $@5 '}' '{' lines '}'

   57 @6: %empty

   58 @7: %empty

   59 $@8: %empty

   60 $@9: %empty

   61 $@10: %empty

   62 whileStructure: WHILE '(' @6 statement @7 $@8 ')' '{' $@9 lines $@10 '}'

   63 @11: %empty

   64 @12: %empty

   65 $@13: %empty

   66 @14: %empty

   67 @15: %empty

   68 $@16: %empty

   69 $@17: %empty

   70 forStructure: FOR '(' assign ';' @11 statement @12 $@13 ';' @14 assign @15 ')' '{' $@16 lines $@17 '}'

   71 @18: %empty

   72 functionStructure: DEF ID @18 '(' args ')' '{' lines '}'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 29 45
'(' (40) 13 38 53 56 62 70 72
')' (41) 13 38 53 56 62 70 72
'*' (42) 43
'+' (43) 40
'-' (45) 21 41
'/' (47) 42
';' (59) 6 70
'<' (60) 46 48
'=' (61) 11 44 45 48 49
'>' (62) 47 49
'{' (123) 53 56 62 70 72
'}' (125) 53 56 62 70 72
error (256)
REG (258) 11 19
NUM (259) 20 21
ENTER (260) 7
STRING (261) 22
COM (262) 14 16
IF (263) 53
IFELSE (264) 56
WHILE (265) 62
FOR (266) 70
DEF (267) 72
TRUEASSIGN (268)
ASSIGN (269)
SUM (270)
RES (271)
MUL (272)
DIV (273)
EVAL (274)
EQ (275)
NEQ (276)
LES (277)
MOR (278)
LEQ (279)
MEQ (280)
ITERLIMIT (281)
AND (282) 50
OR (283) 51
ID (284) 13 72


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
root (44)
    on left: 1 2, on right: 0 2
lines (45)
    on left: 3 4, on right: 3 53 56 62 70 72
line (46)
    on left: 5 6 7, on right: 2 3 4
exp (47)
    on left: 8 9, on right: 6
assign (48)
    on left: 11, on right: 8 70
@1 (49)
    on left: 10, on right: 11
call (50)
    on left: 13, on right: 9 16 17 33 35
@2 (51)
    on left: 12, on right: 13
args (52)
    on left: 14 15 16 17 18, on right: 13 14 16 72
element (53)
    on left: 19 20 21 22, on right: 14 15 32 34
structure (54)
    on left: 23 24 25 26 27, on right: 5
statement (55)
    on left: 28 29, on right: 53 56 62 70
unitA (56)
    on left: 30 31, on right: 11 30 36 37
unitB (57)
    on left: 32 33 34 35, on right: 30 31 32 33
comparison (58)
    on left: 36 37, on right: 36 39
comparisons (59)
    on left: 38 39, on right: 28 29 38
operatorA (60)
    on left: 40 41, on right: 30
operatorB (61)
    on left: 42 43, on right: 32 33
compOperator (62)
    on left: 44 45 46 47 48 49 50 51, on right: 36 38
ifStructure (63)
    on left: 53, on right: 23
$@3 (64)
    on left: 52, on right: 53
ifElseStructure (65)
    on left: 56, on right: 24
$@4 (66)
    on left: 54, on right: 56
$@5 (67)
    on left: 55, on right: 56
whileStructure (68)
    on left: 62, on right: 25
@6 (69)
    on left: 57, on right: 62
@7 (70)
    on left: 58, on right: 62
$@8 (71)
    on left: 59, on right: 62
$@9 (72)
    on left: 60, on right: 62
$@10 (73)
    on left: 61, on right: 62
forStructure (74)
    on left: 70, on right: 26
@11 (75)
    on left: 63, on right: 70
@12 (76)
    on left: 64, on right: 70
$@13 (77)
    on left: 65, on right: 70
@14 (78)
    on left: 66, on right: 70
@15 (79)
    on left: 67, on right: 70
$@16 (80)
    on left: 68, on right: 70
$@17 (81)
    on left: 69, on right: 70
functionStructure (82)
    on left: 72, on right: 27
@18 (83)
    on left: 71, on right: 72


State 0

    0 $accept: . root $end

    $default  reduce using rule 1 (root)

    root  go to state 1


State 1

    0 $accept: root . $end
    2 root: root . line

    $end    shift, and go to state 2
    REG     shift, and go to state 3
    ENTER   shift, and go to state 4
    IF      shift, and go to state 5
    IFELSE  shift, and go to state 6
    WHILE   shift, and go to state 7
    FOR     shift, and go to state 8
    DEF     shift, and go to state 9
    ID      shift, and go to state 10

    line               go to state 11
    exp                go to state 12
    assign             go to state 13
    call               go to state 14
    structure          go to state 15
    ifStructure        go to state 16
    ifElseStructure    go to state 17
    whileStructure     go to state 18
    forStructure       go to state 19
    functionStructure  go to state 20


State 2

    0 $accept: root $end .

    $default  accept


State 3

   11 assign: REG . @1 '=' unitA

    $default  reduce using rule 10 (@1)

    @1  go to state 21


State 4

    7 line: ENTER .

    $default  reduce using rule 7 (line)


State 5

   53 ifStructure: IF . '(' statement $@3 ')' '{' lines '}'

    '('  shift, and go to state 22


State 6

   56 ifElseStructure: IFELSE . '(' statement $@4 ')' '{' lines $@5 '}' '{' lines '}'

    '('  shift, and go to state 23


State 7

   62 whileStructure: WHILE . '(' @6 statement @7 $@8 ')' '{' $@9 lines $@10 '}'

    '('  shift, and go to state 24


State 8

   70 forStructure: FOR . '(' assign ';' @11 statement @12 $@13 ';' @14 assign @15 ')' '{' $@16 lines $@17 '}'

    '('  shift, and go to state 25


State 9

   72 functionStructure: DEF . ID @18 '(' args ')' '{' lines '}'

    ID  shift, and go to state 26


State 10

   13 call: ID . @2 '(' args ')'

    $default  reduce using rule 12 (@2)

    @2  go to state 27


State 11

    2 root: root line .

    $default  reduce using rule 2 (root)


State 12

    6 line: exp . ';'

    ';'  shift, and go to state 28


State 13

    8 exp: assign .

    $default  reduce using rule 8 (exp)


State 14

    9 exp: call .

    $default  reduce using rule 9 (exp)


State 15

    5 line: structure .

    $default  reduce using rule 5 (line)


State 16

   23 structure: ifStructure .

    $default  reduce using rule 23 (structure)


State 17

   24 structure: ifElseStructure .

    $default  reduce using rule 24 (structure)


State 18

   25 structure: whileStructure .

    $default  reduce using rule 25 (structure)


State 19

   26 structure: forStructure .

    $default  reduce using rule 26 (structure)


State 20

   27 structure: functionStructure .

    $default  reduce using rule 27 (structure)


State 21

   11 assign: REG @1 . '=' unitA

    '='  shift, and go to state 29


State 22

   53 ifStructure: IF '(' . statement $@3 ')' '{' lines '}'

    REG     shift, and go to state 30
    NUM     shift, and go to state 31
    STRING  shift, and go to state 32
    ID      shift, and go to state 10
    '('     shift, and go to state 33
    '-'     shift, and go to state 34
    '!'     shift, and go to state 35

    call         go to state 36
    element      go to state 37
    statement    go to state 38
    unitA        go to state 39
    unitB        go to state 40
    comparison   go to state 41
    comparisons  go to state 42


State 23

   56 ifElseStructure: IFELSE '(' . statement $@4 ')' '{' lines $@5 '}' '{' lines '}'

    REG     shift, and go to state 30
    NUM     shift, and go to state 31
    STRING  shift, and go to state 32
    ID      shift, and go to state 10
    '('     shift, and go to state 33
    '-'     shift, and go to state 34
    '!'     shift, and go to state 35

    call         go to state 36
    element      go to state 37
    statement    go to state 43
    unitA        go to state 39
    unitB        go to state 40
    comparison   go to state 41
    comparisons  go to state 42


State 24

   62 whileStructure: WHILE '(' . @6 statement @7 $@8 ')' '{' $@9 lines $@10 '}'

    $default  reduce using rule 57 (@6)

    @6  go to state 44


State 25

   70 forStructure: FOR '(' . assign ';' @11 statement @12 $@13 ';' @14 assign @15 ')' '{' $@16 lines $@17 '}'

    REG  shift, and go to state 3

    assign  go to state 45


State 26

   72 functionStructure: DEF ID . @18 '(' args ')' '{' lines '}'

    $default  reduce using rule 71 (@18)

    @18  go to state 46


State 27

   13 call: ID @2 . '(' args ')'

    '('  shift, and go to state 47


State 28

    6 line: exp ';' .

    $default  reduce using rule 6 (line)


State 29

   11 assign: REG @1 '=' . unitA

    REG     shift, and go to state 30
    NUM     shift, and go to state 31
    STRING  shift, and go to state 32
    ID      shift, and go to state 10
    '-'     shift, and go to state 34

    call     go to state 36
    element  go to state 37
    unitA    go to state 48
    unitB    go to state 40


State 30

   19 element: REG .

    $default  reduce using rule 19 (element)


State 31

   20 element: NUM .

    $default  reduce using rule 20 (element)


State 32

   22 element: STRING .

    $default  reduce using rule 22 (element)


State 33

   38 comparisons: '(' . comparisons ')' compOperator '(' comparisons ')'

    REG     shift, and go to state 30
    NUM     shift, and go to state 31
    STRING  shift, and go to state 32
    ID      shift, and go to state 10
    '('     shift, and go to state 33
    '-'     shift, and go to state 34

    call         go to state 36
    element      go to state 37
    unitA        go to state 39
    unitB        go to state 40
    comparison   go to state 41
    comparisons  go to state 49


State 34

   21 element: '-' . NUM

    NUM  shift, and go to state 50


State 35

   29 statement: '!' . comparisons

    REG     shift, and go to state 30
    NUM     shift, and go to state 31
    STRING  shift, and go to state 32
    ID      shift, and go to state 10
    '('     shift, and go to state 33
    '-'     shift, and go to state 34

    call         go to state 36
    element      go to state 37
    unitA        go to state 39
    unitB        go to state 40
    comparison   go to state 41
    comparisons  go to state 51


State 36

   35 unitB: call .

    $default  reduce using rule 35 (unitB)


State 37

   34 unitB: element .

    $default  reduce using rule 34 (unitB)


State 38

   53 ifStructure: IF '(' statement . $@3 ')' '{' lines '}'

    $default  reduce using rule 52 ($@3)

    $@3  go to state 52


State 39

   30 unitA: unitA . operatorA unitB
   36 comparison: unitA . compOperator comparison
   37           | unitA .

    AND  shift, and go to state 53
    OR   shift, and go to state 54
    '='  shift, and go to state 55
    '-'  shift, and go to state 56
    '!'  shift, and go to state 57
    '+'  shift, and go to state 58
    '<'  shift, and go to state 59
    '>'  shift, and go to state 60

    $default  reduce using rule 37 (comparison)

    operatorA     go to state 61
    compOperator  go to state 62


State 40

   31 unitA: unitB .
   32 unitB: unitB . operatorB element
   33      | unitB . operatorB call

    '/'  shift, and go to state 63
    '*'  shift, and go to state 64

    $default  reduce using rule 31 (unitA)

    operatorB  go to state 65


State 41

   39 comparisons: comparison .

    $default  reduce using rule 39 (comparisons)


State 42

   28 statement: comparisons .

    $default  reduce using rule 28 (statement)


State 43

   56 ifElseStructure: IFELSE '(' statement . $@4 ')' '{' lines $@5 '}' '{' lines '}'

    $default  reduce using rule 54 ($@4)

    $@4  go to state 66


State 44

   62 whileStructure: WHILE '(' @6 . statement @7 $@8 ')' '{' $@9 lines $@10 '}'

    REG     shift, and go to state 30
    NUM     shift, and go to state 31
    STRING  shift, and go to state 32
    ID      shift, and go to state 10
    '('     shift, and go to state 33
    '-'     shift, and go to state 34
    '!'     shift, and go to state 35

    call         go to state 36
    element      go to state 37
    statement    go to state 67
    unitA        go to state 39
    unitB        go to state 40
    comparison   go to state 41
    comparisons  go to state 42


State 45

   70 forStructure: FOR '(' assign . ';' @11 statement @12 $@13 ';' @14 assign @15 ')' '{' $@16 lines $@17 '}'

    ';'  shift, and go to state 68


State 46

   72 functionStructure: DEF ID @18 . '(' args ')' '{' lines '}'

    '('  shift, and go to state 69


State 47

   13 call: ID @2 '(' . args ')'

    REG     shift, and go to state 30
    NUM     shift, and go to state 31
    STRING  shift, and go to state 32
    ID      shift, and go to state 10
    '-'     shift, and go to state 34

    $default  reduce using rule 18 (args)

    call     go to state 70
    args     go to state 71
    element  go to state 72


State 48

   11 assign: REG @1 '=' unitA .
   30 unitA: unitA . operatorA unitB

    '-'  shift, and go to state 56
    '+'  shift, and go to state 58

    $default  reduce using rule 11 (assign)

    operatorA  go to state 61


State 49

   38 comparisons: '(' comparisons . ')' compOperator '(' comparisons ')'

    ')'  shift, and go to state 73


State 50

   21 element: '-' NUM .

    $default  reduce using rule 21 (element)


State 51

   29 statement: '!' comparisons .

    $default  reduce using rule 29 (statement)


State 52

   53 ifStructure: IF '(' statement $@3 . ')' '{' lines '}'

    ')'  shift, and go to state 74


State 53

   50 compOperator: AND .

    $default  reduce using rule 50 (compOperator)


State 54

   51 compOperator: OR .

    $default  reduce using rule 51 (compOperator)


State 55

   44 compOperator: '=' . '='

    '='  shift, and go to state 75


State 56

   41 operatorA: '-' .

    $default  reduce using rule 41 (operatorA)


State 57

   45 compOperator: '!' . '='

    '='  shift, and go to state 76


State 58

   40 operatorA: '+' .

    $default  reduce using rule 40 (operatorA)


State 59

   46 compOperator: '<' .
   48             | '<' . '='

    '='  shift, and go to state 77

    $default  reduce using rule 46 (compOperator)


State 60

   47 compOperator: '>' .
   49             | '>' . '='

    '='  shift, and go to state 78

    $default  reduce using rule 47 (compOperator)


State 61

   30 unitA: unitA operatorA . unitB

    REG     shift, and go to state 30
    NUM     shift, and go to state 31
    STRING  shift, and go to state 32
    ID      shift, and go to state 10
    '-'     shift, and go to state 34

    call     go to state 36
    element  go to state 37
    unitB    go to state 79


State 62

   36 comparison: unitA compOperator . comparison

    REG     shift, and go to state 30
    NUM     shift, and go to state 31
    STRING  shift, and go to state 32
    ID      shift, and go to state 10
    '-'     shift, and go to state 34

    call        go to state 36
    element     go to state 37
    unitA       go to state 39
    unitB       go to state 40
    comparison  go to state 80


State 63

   42 operatorB: '/' .

    $default  reduce using rule 42 (operatorB)


State 64

   43 operatorB: '*' .

    $default  reduce using rule 43 (operatorB)


State 65

   32 unitB: unitB operatorB . element
   33      | unitB operatorB . call

    REG     shift, and go to state 30
    NUM     shift, and go to state 31
    STRING  shift, and go to state 32
    ID      shift, and go to state 10
    '-'     shift, and go to state 34

    call     go to state 81
    element  go to state 82


State 66

   56 ifElseStructure: IFELSE '(' statement $@4 . ')' '{' lines $@5 '}' '{' lines '}'

    ')'  shift, and go to state 83


State 67

   62 whileStructure: WHILE '(' @6 statement . @7 $@8 ')' '{' $@9 lines $@10 '}'

    $default  reduce using rule 58 (@7)

    @7  go to state 84


State 68

   70 forStructure: FOR '(' assign ';' . @11 statement @12 $@13 ';' @14 assign @15 ')' '{' $@16 lines $@17 '}'

    $default  reduce using rule 63 (@11)

    @11  go to state 85


State 69
